<resources>
    <string name="app_name">Covid19-AR</string>
    <string name="patalla_de_inicio">Patalla de Inicio</string>
    <string name="terminos">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</string>
    <string name="landing_subtitulo">Te vamos a ayudar a realizar una autoevaluación de tus síntomas, con lo que vas a poder postularte para sacar un Pasaporte Sanitario.</string>
    <string name="landing_titulo">Intro sobre el propósito de la aplicación</string>
    <string name="landing_pie_subtitulo">Este pasaporte sanitario, junto con el correspondiente permiso de circulación y tu DNI, te permitirán circular en espacios públicos.</string>
    <string name="siguiente">Siguiente</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_contacto">NO PODÉS ESTAR EN CONTACTO CON OTRAS PERSONAS</string>
    <string name="dias_restantes">Días\nrestantes</string>
    <string name="derivado">DERIVADO A SALUD LOCAL</string>
    <string name="estado_aislado">Contactate con el sistema de Salud. Mientras tanto, mantené el aislamiento y minimizá el contacto con otras personas.</string>
    <string name="_dias_ejemplo">10</string>
    <string name="covid_positivo">DERIVADO A SALUD: COVID-19 POSITIVO</string>
    <string name="obetener_numero_tramite"><u>¿Cómo obtengo mi número de trámite?</u></string>
    <string name="femenino">Femenino</string>
    <string name="masculio">Masculino</string>
    <string name="confirmar_tus_datos">Para continuar necesitamos que confirmes tus datos</string>
    <string name="dni_colon">DNI:</string>
    <string name="numero_de_tramite">Número de trámite:</string>
    <string name="numero_de_tramite_sin_puntos">Número de trámite</string>
    <string name="fecha_nacimiento">Fecha de nacimiento:</string>
    <string name="fecha_nac">Fecha de nac:</string>
    <string name="sexo">Sexo:</string>
    <string name="gracias_por_tu_ayuda">¡MUCHAS GRACIAS POR TU AYUDA!</string>
    <string name="ahora_podemos_continuar">Ahora podremos continuar con el diagnóstico.</string>
    <string name="hubo_error">HUBO UN ERROR</string>
    <string name="hubo_error_desc">Por favor vuelve a intentarlo.</string>
    <string name="continuar">CONTINUAR</string>
    <string name="escanear_dni">ESCANEAR DNI</string>
    <string name="permiso_cicular">Recordá las medidas sanitarias al volver a tu casa</string>
    <string name="horas_restantes">Horas\nrestantes</string>
    <string name="horas_48">48</string>
    <string name="podes_circular">Podés ir a trabajar</string>
    <string name="nuevo_autodiagnostico">Nuevo autodiagnóstico</string>
    <string name="actualizar_certificado">Refrescar información</string>
    <string name="mas_informacion">Más información</string>
    <string name="mas_informacion_subrayado"><u>Más información</u></string>
    <string name="horas">horas</string>
    <string name="recomendacion_test_cada_x_horas">Es recomendable que\nhagas el test cada</string>
    <string name="token_de_seguridad">Token de Seguridad</string>
    <string name="token_de_seguridad_usuario_con_qr">Certificado único de circulación</string>
    <string name="cert_valido_con_token">Esta credencial es válida sólo si coincide el token de seguridad entre teléfonos</string>
    <string name="horas_10">10</string>
    <string name="quedate_en_casa">Quedate en casa</string>
    <string name="estas_en_cuarentena">Estás en cuarentena, salí solo para hacer las compras.</string>
    <string name="habilitar_circulacion">Agregar certificado</string>
    <string name="ampliar_movilidad">Para ampliar tu movilidad, deberás complementar a este diagnóstico, la habilitación por circulación por transporte.</string>
    <string name="fecha_resultado">Fecha resultado:</string>
    <string name="texto_resultado_positivo_uno">%1$s, %2$s de acuerdo a los análisis de laboratorio. \n\nDebés seguir estrictamente las recomendaciones médicas y permanecer en aislamiento.\n\nSi tus síntomas empeoran o necesitás asistencia médica o psicológica, ponete en contacto otra vez con el teléfono de asistencia:</string>
    <string name="texto_resultado_positivo_dos">el sistema de salud de tu jurisdicción confirmó tu diagnóstico positivo de coronavirus (COVID-19)</string>
    <string name="ministerio_de_salud">Ministerio de Salud en CABA 148</string>
    <string name="mira_recomendaciones_de_salud">Mira las recomendaciones de salud</string>
    <string name="no_automediques">Es fundamental que conozcas cómo cuidarte a vos y a tus conocidos. No te automediques y consulta siempre al sistema de salud.</string>
    <string name="aceptar">aceptar</string>
    <string name="covid_negativo">Covid-19 negativo</string>
    <string name="texto_resultado_negativo">, El sistema de Salud confirmó tu resultado negativo en el test por coronavirus (COVID-19) de acuerdo a los análisis de laboratorio. \n\n Sigue las medidas de prevención y evitar salir de tu casa, para cuidarte vos y no exponer a otras personas. \n\n Si tenés que salir de casa, te recomendamos que lleves tu DNI y solicite el Certificado único habilitante para circulación.</string>
    <string name="autodiagnostico_titulo">Autoevaluación</string>
    <string name="realiza_autodiagnostico">Por favor realiza el autodiagnóstico</string>
    <string name="sintomas_titulo">Síntomas</string>
    <string name="caba_telefonos">CABA: 107 + Whatsapp: 11-5050-0147</string>
    <string name="desvincular_dni"><u>Desvincular DNI \n (cerrará la sesión actual)</u></string>
    <string name="msg_no_tiene_sintomas">%1$s, no tenés síntomas compatibles con COVID-19.</string>
    <string name="numero_de_horas_cada_autodiagnostico">48</string>
    <string name="txt_rocomedar_tiempo_autodiagnostico">Es recomendable que hagas el autodiagnóstico cada:</string>
    <string name="txt_sin_sintomas_title">sin síntomas covid 19</string>
    <string name="msg_evitar_salir">Seguí las medidas de prevención y evitá salir de tu casa, para cuidarte vos y no exponer a otras personas.</string>
    <string name="msg_recordatorio_resultado_puede_circular_fragment">Recordá que solo podés salir de tu casa para realizar compras en comercios de cercanía. Para otros movimientos necesitás el Certificado Único Habilitante para Circulación.</string>
    <string name="msg_instrucciones_llamar">Si presentás síntomas o necesitás asistencia médica o psicológica llamá a:</string>
    <string name="msg_instrucciones_llamar_resultado_negativo">Si tenés síntomas o necesitás recibir asistencia médica o psicológica podés llamar al:</string>
    <string name="msg_numero_llamar">CABA: 107 + Whatsapp: 11–5050–0147</string>
    <string name="titulo_en_evaluacion">en evaluación</string>
    <string name="msg_sintomas_compatibles_y_reportados">%1$s, tu autodiagnóstico tiene síntomas compatibles con COVID-19 y fueron reportados.</string>
    <string name="msg_peticion_no_salir">Te pedimos que no salgas de tu domicilio hasta que no tengas un diagnóstico definitivo.</string>
    <string name="msg_mirar_recomendaciones">Mira nuestras recomendaciones</string>
    <string name="ver_resultado">Ver resultado</string>
    <string name="cual_es_temperatura">¿Cuál es tu temperatura corporal actual?</string>
    <string name="consejos_medir_temperatura">Consejos para medir la temperatura</string>
    <string name="consejo_uno_temperatura">Medir la temperatura siempre en el mismo lugar (oído y axila), ya que de otro modo pueden variar los valores.</string>
    <string name="consejo_dos_temperatura">No se debe tomar la temperatura después del baño o de haber realizado una actividad física. Se debe esperar por lo menos 20 minutos.</string>
    <string name="consejo_tres_temperatura">La fiebre hay que medirla, no hay que fiarse de la percepción que se tenga al tocar la frente.</string>
    <string name="consejo_cuatro_temperatura">Los termómetros deben ser seguros, que no se rompan.</string>
    <string name="cerrar">Cerrar</string>
    <string name="sintoma_tos">¿Tenés tos?</string>
    <string name="sintoma_dolor_de_garganta">¿Tenés dolor de garganta?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="sintoma_dificultad_respiratoria">¿Tenés dificultad respiratoria o falta de aire?</string>
    <string name="confirmacion">Confirmación</string>
    <string name="telefono">Teléfono</string>
    <string name="vence">Vence %s</string>
    <string name="habilitado">Habilitado</string>
    <string name="esencial">Permiso especial por 48h</string>
    <string name="no_disponible">No disponible</string>
    <string name="agregar">Agregar</string>
    <string name="certificado_unico_circulacion">Certificado único de circulación</string>
    <string name="certificado_unico_circulacion_qr">Certificado único \nde circulación</string>
    <string name="phone_confirmation_explanation">Es importante que esta información sea correcta para poder contactarte y acercarte la asistencia que requieras.</string>
    <string name="phone_confirmation_current">Tenemos registrado %1$s como tu número de contacto.</string>
    <string name="phone_confirmation_correct_phone">Por favor corregí tu número de teléfono si es necesario:</string>
</resources>