<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="36dp"
    android:paddingEnd="36dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_symptom_title"
        style="@style/texto_medium_roboto_bold.no_line_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sintoma_tos" />

    <RadioGroup
        android:id="@+id/radio_group_symptom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_symptom_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/si"
            android:theme="@style/RadioButton"
            app:useMaterialThemeColors="true" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_symptom_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:theme="@style/RadioButton"
            app:useMaterialThemeColors="true" />
    </RadioGroup>

</LinearLayout>