<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtNoPuedeCircularTitle"
        style="@style/texto_medium_roboto.black"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@color/rosaPrincipal"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/titulo_en_evaluacion"
        android:textAllCaps="true"
        android:textColor="@color/blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNoPuedeCircularDiagnostico"
        style="@style/texto_medium_roboto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNoPuedeCircularTitle"
        tools:text="@string/msg_sintomas_compatibles_y_reportados" />

    <TextView
        android:id="@+id/txtNoSalir"
        style="@style/texto_medium_roboto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:autoLink="web"
        android:text="@string/msg_peticion_no_salir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNoPuedeCircularDiagnostico" />

    <TextView
        android:id="@+id/txtIntruccionesLlamar"
        style="@style/texto_medium_roboto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:autoLink="web"
        android:text="@string/msg_instrucciones_llamar_resultado_negativo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNoSalir" />

    <TextView
        android:id="@+id/txtNumeroLlamar"
        style="@style/texto_small_roboto_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIntruccionesLlamar"
        tools:text="@string/msg_numero_llamar" />

</androidx.constraintlayout.widget.ConstraintLayout>
