<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <include
        android:id="@+id/seccion_sintoma"
        layout="@layout/current_state_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/agregar_certificado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/seccion_sintoma">

        <TextView
            android:id="@+id/qr_titulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/certificado_unico_circulacion"
            android:textColor="@color/gris_2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/status_sin_circulacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/no_disponible"
            android:textColor="@color/covid_azul"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/qr_titulo"
            app:layout_constraintTop_toBottomOf="@id/qr_titulo" />

        <TextView
            android:id="@+id/qr_boton_agregar_certificado"
            style="@style/BotonAzulRedondeado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/agregar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_sin_circulacion"
            app:layout_goneMarginTop="23dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
